jmdns , lint suggestions cleaning